Fix : code smells